--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -92,4 +92,24 @@
   .animation-delay-4000 {
     animation-delay: 4s;
   }
+
+  /* Force 24-hour format for datetime-local inputs */
+  input[type="datetime-local"]::-webkit-datetime-edit-ampm-field {
+    display: none !important;
+  }
+  
+  input[type="time"]::-webkit-datetime-edit-ampm-field {
+    display: none !important;
+  }
+  
+  input[type="datetime-local"] {
+    padding-right: 2.5rem;
+  }
+  
+  input[type="datetime-local"]::-webkit-calendar-picker-indicator {
+    position: absolute;
+    right: 0.5rem;
+    cursor: pointer;
+    padding: 0.25rem;
+  }
 }
